--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -6,6 +6,9 @@
         <i class="material-icons">lock</i>
         Yêu cầu mật khẩu
       </h4>
+      <button class="close-btn" (click)="closePasswordModal()">
+        <i class="material-icons">close</i>
+      </button>
     </div>
     <div class="password-modal-body">
       <p>Vui lòng nhập mật khẩu để truy cập tab Manage:</p>
