--- a/src/app/pages/materials-asm2/materials-asm2.component.html
+++ b/src/app/pages/materials-asm2/materials-asm2.component.html
@@ -563,6 +563,10 @@
             <i class="material-icons">merge_type</i>
             <span>Gộp dòng trùng lặp</span>
           </button>
+          <button class="popup-action-btn delete-action" (click)="resetAllStock(); closeMorePopup()">
+            <i class="material-icons">delete_forever</i>
+            <span>Reset Stock (Xóa toàn bộ tồn kho)</span>
+          </button>
         </div>
       </div>
       
