--- a/src/app/pages/outbound-asm2/outbound-asm2.component.html
+++ b/src/app/pages/outbound-asm2/outbound-asm2.component.html
@@ -303,7 +303,7 @@
         <tbody>
           <tr *ngFor="let material of getPaginatedMaterials(); let i = index">
             <td class="factory-cell readonly-cell">
-              {{material.factory || 'ASM1'}}
+              {{material.factory || selectedFactory}}
             </td>
             <td class="index-cell readonly-cell">
               {{i + 1}}
