--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -71,7 +71,7 @@
             </button>
             <button class="change-location-btn-desktop" (click)="openChangeLocationModal()" title="Thay đổi vị trí">
               <i class="material-icons">swap_horiz</i>
-              Change Location
+              Đổi Vị Trí
             </button>
             <button class="refresh-btn" (click)="refreshData()" title="Làm mới dữ liệu Location">
               <i class="material-icons">refresh</i>
@@ -94,7 +94,7 @@
           <!-- Change Location Button -->
           <button class="change-location-btn" (click)="openChangeLocationModal()" title="Thay đổi vị trí">
             <i class="material-icons">swap_horiz</i>
-            Change Location
+            Đổi Vị Trí
           </button>
         </div>
         
